# SendDeploy

./: .gitignore  README.md  pyproject.toml
src/SendDeploy/: cli.py
