[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "SendDeploy"
version = "0.0.1"
authors = [
  { name="Julio Zamora", email="julio17795@gmail.com" },
]
description = "A small example package"
readme = "README.md"
dependencies = ["paramiko", "scp"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

# Specify the CLI entry point here
[project.scripts]
SendDeploy = "SendDeploy.cli:main"